# europython-ffmpeg

./: README.md  index.html  pyproject.toml  slides.html
assets/: regplates.py  test_split.py
